--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   </head>
   <body>
   	<%=render 'layouts/header'%>
-    
+    <%flash.each do |key,value|%>
+        <div class="alert alert-<%=key%>"><%= value %></div>
+    <%end%>
     <div class="container">
       <%= yield %>
       <%=render 'layouts/footer'%>
